Fix: Too much space between paragraphs in default CTA form

--- a/css/e20r-blur-pmpro-content.css
+++ b/css/e20r-blur-pmpro-content.css
@@ -83,7 +83,7 @@ div.e20r-blur-call-to-action div.pmpro_level {
     margin: 10px;
 }
 div.e20r-blur-call-to-action .entry-meta {
-    margin: 32px 0 0;
+    margin: 5px 0 0;
 }
 div.e20r-blur-call-to-action .entry-meta .pmpro_btn {
     width: 100%;
